createURM path fix

--- a/Notebooks/tryCFItemKNN.ipynb
+++ b/Notebooks/tryCFItemKNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -32,13 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tt/9v6608x550n51759gpcrffsc0000gn/T/ipykernel_5332/4270484765.py:1: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Mike\\AppData\\Local\\Temp\\ipykernel_1408\\4270484765.py:1: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  dataset = pd.read_csv('../Input/interactions_and_impressions.csv')\n"
      ]
     }
