--- a/Notebooks/tryCFItemKNN.ipynb
+++ b/Notebooks/tryCFItemKNN.ipynb
@@ -3,10 +3,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Utils'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Tuple, Callable, Dict, Optional, List\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mUtils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwriteSubmission\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m write_submission\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'Utils'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from typing import Tuple, Callable, Dict, Optional, List\n",
@@ -23,16 +33,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Create URM"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -46,32 +55,36 @@
    "source": [
     "dataset = pd.read_csv('../Input/interactions_and_impressions.csv')\n",
     "dataset = dataset.drop(columns=['Impressions'])"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "datasetCOO = sp.coo_matrix((dataset[\"Data\"].values,\n",
     "                          (dataset[\"UserID\"].values, dataset[\"ItemID\"].values)))\n",
     "userIDS = dataset['UserID'].unique()\n",
     "itemIDS = dataset['ItemID'].unique()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[0, 0, 0, ..., 0, 0, 0],\n       [0, 0, 0, ..., 0, 0, 0],\n       [0, 0, 0, ..., 0, 0, 0],\n       ...,\n       [0, 0, 0, ..., 0, 0, 0],\n       [0, 0, 0, ..., 0, 0, 0],\n       [0, 0, 0, ..., 0, 0, 0]])"
+      "text/plain": [
+       "array([[0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       ...,\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0]])"
+      ]
      },
      "execution_count": 24,
      "metadata": {},
@@ -87,18 +100,19 @@
     "    x = x+1\n",
     "\n",
     "URM"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
+   "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "<41629x24507 sparse matrix of type '<class 'numpy.int64'>'\n\twith 1051828 stored elements in Compressed Sparse Row format>"
+      "text/plain": [
+       "<41629x24507 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 1051828 stored elements in Compressed Sparse Row format>"
+      ]
      },
      "execution_count": 25,
      "metadata": {},
@@ -108,23 +122,19 @@
    "source": [
     "URM = sp.csr_matrix(URM)\n",
     "URM"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Train, Validation, Test SPLIT"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -139,18 +149,19 @@
    "source": [
     "URM_train, URM_test = split_train_in_two_percentage_global_sample(URM, train_percentage = 0.80)\n",
     "URM_train, URM_validation = split_train_in_two_percentage_global_sample(URM_train, train_percentage = 0.80)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
+   "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "<41629x24507 sparse matrix of type '<class 'numpy.float64'>'\n\twith 673170 stored elements in Compressed Sparse Row format>"
+      "text/plain": [
+       "<41629x24507 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 673170 stored elements in Compressed Sparse Row format>"
+      ]
      },
      "execution_count": 27,
      "metadata": {},
@@ -159,18 +170,19 @@
    ],
    "source": [
     "URM_train"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
+   "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "<41629x24507 sparse matrix of type '<class 'numpy.float64'>'\n\twith 168292 stored elements in Compressed Sparse Row format>"
+      "text/plain": [
+       "<41629x24507 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 168292 stored elements in Compressed Sparse Row format>"
+      ]
      },
      "execution_count": 28,
      "metadata": {},
@@ -179,18 +191,19 @@
    ],
    "source": [
     "URM_validation"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
+   "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "<41629x24507 sparse matrix of type '<class 'numpy.float64'>'\n\twith 210366 stored elements in Compressed Sparse Row format>"
+      "text/plain": [
+       "<41629x24507 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 210366 stored elements in Compressed Sparse Row format>"
+      ]
      },
      "execution_count": 29,
      "metadata": {},
@@ -199,23 +212,19 @@
    ],
    "source": [
     "URM_test"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Cosine Similarity"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def naive_similarity(urm: sp.csc_matrix, shrink: int):\n",
@@ -237,14 +246,12 @@
     "\n",
     "    np.fill_diagonal(weights, 0.0)\n",
     "    return weights"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def vector_similarity(urm: sp.csc_matrix, shrink: int):\n",
@@ -263,14 +270,12 @@
     "\n",
     "    np.fill_diagonal(weights, 0.0)\n",
     "    return weights"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def matrix_similarity(urm: sp.csc_matrix, shrink: int):\n",
@@ -284,36 +289,30 @@
     "    np.fill_diagonal(weights, 0.0)\n",
     "\n",
     "    return weights"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 33,
+   "metadata": {},
    "outputs": [],
    "source": [
     "urm_csc = URM_train.tocsc()\n",
     "shrink = 5\n",
     "slice_size = 100"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Collaborative Filtering ItemKNN Recommender"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 34,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class CFItemKNN(object):\n",
@@ -343,18 +342,18 @@
     "\n",
     "        ranking = np.flip(np.argsort(ranking))\n",
     "        return ranking[:at]"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 35,
+   "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "<__main__.CFItemKNN at 0x7f8838a1bac0>"
+      "text/plain": [
+       "<__main__.CFItemKNN at 0x7f8838a1bac0>"
+      ]
      },
      "execution_count": 35,
      "metadata": {},
@@ -364,14 +363,12 @@
    "source": [
     "itemknn_recommender = CFItemKNN(shrink=50)\n",
     "itemknn_recommender"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 36,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -386,97 +383,82 @@
     "%%time\n",
     "\n",
     "itemknn_recommender.fit(URM_train.tocsc(), matrix_similarity)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Submission"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 37,
+   "metadata": {},
    "outputs": [],
    "source": [
     "best_shrink = 10\n",
     "urm_train_validation = URM_train + URM_validation"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
+   "metadata": {},
    "outputs": [],
    "source": [
     "best_recommender = CFItemKNN(shrink=best_shrink)\n",
     "best_recommender.fit(urm_train_validation.tocsc(), matrix_similarity)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 39,
+   "metadata": {},
    "outputs": [],
    "source": [
     "users_to_recommend = pd.read_csv(\"../Input/data_target_users_test.csv\")['user_id']\n",
     "users_to_recommend = users_to_recommend.tolist()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 40,
+   "metadata": {},
    "outputs": [],
    "source": [
     "write_submission(recommender=best_recommender, urm_train=URM_train, target_users_path=\"../Input/data_target_users_test.csv\",\n",
     "                     out_path='../Output/{}_submission.csv'.format('CFItemKNN'))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 40,
+   "metadata": {},
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
