optuna hyperparameter tuning trial

--- a/Hyperparameter Tuning/ItemKNNCF.ipynb
+++ b/Hyperparameter Tuning/ItemKNNCF.ipynb
@@ -441,7 +441,7 @@
     "evaluator_validation = EvaluatorHoldout(URM_validation, cutoff_list=[10], verbose=False)\n",
     "\n",
     "recommender = ItemKNNCFRecommender(URM_train)\n",
-    "hyperparameters = {'target' : 0.0}\n"
+    "hyperparameters = {'target' : 0.0}"
    ],
    "metadata": {
     "collapsed": false
@@ -479,7 +479,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unable to load Cython Compute_Similarity, reverting to Python\n"
+      "Unable to load Cython Compute_Similarity, reverting to Python\n",
+      "Similarity column 24507 (100.0%), 671.82 column/sec. Elapsed time 36.48 sec\n"
      ]
     }
    ],
@@ -492,15 +493,6 @@
     "pycharm": {
      "is_executing": true
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
    }
   }
  ],
