Updates cython + first trials for SLIM

--- a/Notebooks/createICM.ipynb
+++ b/Notebooks/createICM.ipynb
@@ -283,16 +283,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "OTTENUTA ICMType"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Algoritmo per ICMType"
+    "## Algoritmo per ICM"
    ],
    "metadata": {
     "collapsed": false
@@ -300,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -312,13 +303,9 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "types = pd.read_csv('../Input/data_ICM_type.csv')\n",
-    "types = types.drop(columns = ['data'], axis=1)\n",
-    "types = types.rename(columns={'feature_id':'type'})"
+    "## Types"
    ],
    "metadata": {
     "collapsed": false
@@ -326,7 +313,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       item_id  type\n0            0     1\n1            1     3\n2            2     4\n3            3     1\n4            4     3\n...        ...   ...\n23086    27963     1\n23087    27964     2\n23088    27965     1\n23089    27966     1\n23090    27967     4\n\n[23091 rows x 2 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>item_id</th>\n      <th>type</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>23086</th>\n      <td>27963</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>23087</th>\n      <td>27964</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>23088</th>\n      <td>27965</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>23089</th>\n      <td>27966</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>23090</th>\n      <td>27967</td>\n      <td>4</td>\n    </tr>\n  </tbody>\n</table>\n<p>23091 rows × 2 columns</p>\n</div>"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "types = pd.read_csv('../Input/data_ICM_type.csv')\n",
+    "types = types.drop(columns = ['data'], axis=1)\n",
+    "types = types.rename(columns={'feature_id':'type'})\n",
+    "types"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "typesFiltered = types[types['item_id'] <= 24506]\n",
@@ -339,10 +350,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/tt/9v6608x550n51759gpcrffsc0000gn/T/ipykernel_60746/98915780.py:1: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  URM = pd.read_csv('../Input/interactions_and_impressions.csv')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "array([    0,     1,     2, ..., 24504, 24505, 24506])"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ICMType = np.zeros((len(itemsURM), 1))"
+    "URM = pd.read_csv('../Input/interactions_and_impressions.csv')\n",
+    "itemsURM = URM['ItemID'].to_numpy()\n",
+    "itemsURM = np.unique(itemsURM, axis=0)\n",
+    "itemsURM"
    ],
    "metadata": {
     "collapsed": false
@@ -350,11 +381,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
+   "outputs": [],
+   "source": [
+    "ICM = np.zeros((len(itemsURM), 2), dtype=int)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "for x in range(len(itemsID)):\n",
-    "    ICMType[itemsID[x]][0] = typesArray[x]"
+    "    ICM[itemsID[x]][0] = typesArray[x]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Length"
    ],
    "metadata": {
     "collapsed": false
@@ -362,10 +413,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       item_id  numberOfEpisodes\n0            0                 1\n1            1                 1\n2            2                21\n3            3                 1\n4            4                 1\n...        ...               ...\n23086    27963                 1\n23087    27964                 1\n23088    27965                 1\n23089    27966                 1\n23090    27967                 2\n\n[23091 rows x 2 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>item_id</th>\n      <th>numberOfEpisodes</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>21</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>23086</th>\n      <td>27963</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>23087</th>\n      <td>27964</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>23088</th>\n      <td>27965</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>23089</th>\n      <td>27966</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>23090</th>\n      <td>27967</td>\n      <td>2</td>\n    </tr>\n  </tbody>\n</table>\n<p>23091 rows × 2 columns</p>\n</div>"
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lenght = pd.read_csv('../Input/data_ICM_length.csv')\n",
+    "lenght = lenght.drop(columns = ['feature_id'], axis=1)\n",
+    "lenght = lenght.rename(columns={'data':'numberOfEpisodes'})\n",
+    "lenght"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "outputs": [],
    "source": [
-    "ICMType = sps.csc"
+    "lenghtFiltered = lenght[lenght['item_id'] <= 24506]\n",
+    "lenghtArray = lenghtFiltered['numberOfEpisodes'].to_numpy()\n",
+    "itemsID = typesFiltered['item_id'].to_numpy()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [],
+   "source": [
+    "for x in range(len(itemsID)):\n",
+    "    ICM[itemsID[x]][1] = lenghtArray[x]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[   1,    1],\n       [   3,    1],\n       [   4,   21],\n       ...,\n       [   1,    1],\n       [   4, 1001],\n       [   1,    1]])"
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ICM"
    ],
    "metadata": {
     "collapsed": false
