--- a/Notebooks/createURM.ipynb
+++ b/Notebooks/createURM.ipynb
@@ -22,7 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tt/9v6608x550n51759gpcrffsc0000gn/T/ipykernel_95418/1891551792.py:1: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Mike\\AppData\\Local\\Temp\\ipykernel_25048\\1891551792.py:1: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  dataset = pd.read_csv('../Input/interactions_and_impressions.csv')\n"
      ]
     }
@@ -82,7 +82,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([    0,     1,     2, ..., 41626, 41627, 41628])"
+      "text/plain": "array([    0,     1,     2, ..., 41626, 41627, 41628], dtype=int64)"
      },
      "execution_count": 5,
      "metadata": {},
@@ -103,7 +103,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([   11,    21,    22, ..., 20006, 20177,  2538])"
+      "text/plain": "array([   11,    21,    22, ..., 20006, 20177,  2538], dtype=int64)"
      },
      "execution_count": 6,
      "metadata": {},
@@ -120,13 +120,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([1, 0, 0, ..., 1, 0, 0])"
+      "text/plain": "array([1, 0, 0, ..., 1, 0, 0], dtype=int64)"
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
    ],
    "source": [
     "x = 0\n",
-    "URM = np.zeros((len(userIDS), len(itemIDS)))\n",
+    "URM = np.zeros((len(userIDS), 27968))\n",
     "URM"
    ],
    "metadata": {
@@ -204,12 +204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "while x < len(datasetCOO.data):\n",
     "    if datasetCOO.data[x] == 0:\n",
-    "        URM[datasetCOO.row[x]][datasetCOO.col[x]] = 1\n",
+    "        URM[datasetCOO.row[x]][datasetCOO.col[x]] = int(5)\n",
+    "    elif datasetCOO.data[x] == 1 and URM[datasetCOO.row[x]][datasetCOO.col[x]] != int(5):\n",
+    "        URM[datasetCOO.row[x]][datasetCOO.col[x]] = int(1)\n",
     "    x = x+1"
    ],
    "metadata": {
@@ -218,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "URM = sps.csr_matrix(URM)"
