--- a/Notebooks/createURM.ipynb
+++ b/Notebooks/createURM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
@@ -16,13 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 83,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Mike\\AppData\\Local\\Temp\\ipykernel_25048\\1891551792.py:1: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Mike\\AppData\\Local\\Temp\\ipykernel_25388\\1891551792.py:1: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  dataset = pd.read_csv('../Input/interactions_and_impressions.csv')\n"
      ]
     }
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 84,
    "outputs": [
     {
      "data": {
       "text/plain": "         UserID  ItemID  Data\n0             0      11     1\n1             0      21     0\n2             0      21     0\n3             0      21     0\n4             0      21     1\n...         ...     ...   ...\n5826501   41628   20448     0\n5826502   41628   20896     1\n5826503   41628   21506     1\n5826504   41628   22882     0\n5826505   41628   23757     0\n\n[5826506 rows x 3 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>UserID</th>\n      <th>ItemID</th>\n      <th>Data</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>11</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>21</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>21</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>21</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0</td>\n      <td>21</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>5826501</th>\n      <td>41628</td>\n      <td>20448</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>5826502</th>\n      <td>41628</td>\n      <td>20896</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>5826503</th>\n      <td>41628</td>\n      <td>21506</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>5826504</th>\n      <td>41628</td>\n      <td>22882</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>5826505</th>\n      <td>41628</td>\n      <td>23757</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>5826506 rows × 3 columns</p>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,13 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 85,
    "outputs": [
     {
      "data": {
       "text/plain": "UserID    int64\nItemID    int64\nData      int64\ndtype: object"
      },
-     "execution_count": 4,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,13 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 86,
    "outputs": [
     {
      "data": {
       "text/plain": "array([    0,     1,     2, ..., 41626, 41627, 41628], dtype=int64)"
      },
-     "execution_count": 5,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,13 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 87,
    "outputs": [
     {
      "data": {
       "text/plain": "array([   11,    21,    22, ..., 20006, 20177,  2538], dtype=int64)"
      },
-     "execution_count": 6,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,13 +120,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 88,
    "outputs": [
     {
      "data": {
       "text/plain": "array([1, 0, 0, ..., 1, 0, 0], dtype=int64)"
      },
-     "execution_count": 12,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,6 +135,30 @@
     "datasetCOO = sps.coo_matrix((dataset[\"Data\"].values,\n",
     "                          (dataset[\"UserID\"].values, dataset[\"ItemID\"].values)))\n",
     "datasetCOO.data"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[0, 0, 0, ..., 0, 0, 0],\n       [0, 0, 0, ..., 0, 0, 0],\n       [0, 0, 0, ..., 0, 0, 0],\n       ...,\n       [0, 0, 0, ..., 0, 0, 0],\n       [0, 0, 0, ..., 0, 0, 0],\n       [0, 0, 0, ..., 0, 0, 0]])"
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interactions = np.zeros((len(userIDS), len(itemIDS)), dtype=int)\n",
+    "for x in range(len(datasetCOO.data)):\n",
+    "    if datasetCOO.data[x] == 0 or datasetCOO.data[x] == 1:\n",
+    "        interactions[datasetCOO.row[x]][datasetCOO.col[x]] += 1\n",
+    "interactions"
    ],
    "metadata": {
     "collapsed": false
