Lots of updates and (1P) slim

--- a/Hyperparameter Tuning/FunkSVD.ipynb
+++ b/Hyperparameter Tuning/FunkSVD.ipynb
@@ -17,9 +17,7 @@
     "from Data_manager.split_functions.split_train_validation_random_holdout import split_train_in_two_percentage_global_sample\n",
     "from Evaluation.Evaluator import EvaluatorHoldout\n",
     "from Recommenders.MatrixFactorization.Cython.MatrixFactorization_Cython import MatrixFactorization_FunkSVD_Cython\n",
-    "from Utils.createURM import newCreateURM\n",
-    "from Utils.createICM import newCreateICM\n",
-    "from Utils.combineURMICM import combine"
+    "from Utils.createURM import createURM"
    ]
   },
   {
@@ -38,8 +36,7 @@
     }
    ],
    "source": [
-    "URM = newCreateURM()\n",
-    "ICM = newCreateICM()"
+    "URM = createURM()"
    ],
    "metadata": {
     "collapsed": false
@@ -84,17 +81,6 @@
    "source": [
     "evaluator_validation = EvaluatorHoldout(URM_validation, cutoff_list=[10])\n",
     "evaluator_test = EvaluatorHoldout(URM_test, cutoff_list=[10])"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [],
-   "source": [
-    "URMICMCombined = combine(ICM = ICM, URM = URM)"
    ],
    "metadata": {
     "collapsed": false
