--- a/Hyperparameter Tuning/coarse-to-fine.ipynb
+++ b/Hyperparameter Tuning/coarse-to-fine.ipynb
@@ -24,7 +24,7 @@
     "from Data_manager.split_functions.split_train_validation_random_holdout import split_train_in_two_percentage_global_sample\n",
     "from Evaluation.Evaluator import EvaluatorHoldout\n",
     "from Recommenders.KNN.ItemKNNCFRecommender import ItemKNNCFRecommender\n",
-    "from Utils.createURM import createURM2"
+    "from Utils.createURM import createURM"
    ],
    "metadata": {
     "collapsed": false
@@ -38,13 +38,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Mike\\PycharmProjects\\recsys-challenge-2022-Pancini-Vitali\\Utils\\createURM.py:43: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/Users/matteopancini/PycharmProjects/recsys-challenge-2022-Pancini-Vitali/Utils/createURM.py:5: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  dataset = pd.read_csv('../Input/interactions_and_impressions.csv')\n"
      ]
     }
    ],
    "source": [
-    "URM = createURM2()"
+    "URM = createURM()"
    ],
    "metadata": {
     "collapsed": false
@@ -58,8 +58,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: 290 (0.70 %) of 41629 users have no sampled items\n",
-      "Warning: 752 (1.81 %) of 41629 users have no sampled items\n"
+      "Warning: 329 (0.79 %) of 41629 users have no sampled items\n",
+      "Warning: 1 (0.00 %) of 41629 users have no train items\n",
+      "Warning: 726 (1.74 %) of 41629 users have no sampled items\n"
      ]
     }
    ],
@@ -79,8 +80,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EvaluatorHoldout: Ignoring 752 ( 1.8%) Users that have less than 1 test interactions\n",
-      "EvaluatorHoldout: Ignoring 290 ( 0.7%) Users that have less than 1 test interactions\n"
+      "EvaluatorHoldout: Ignoring 726 ( 1.7%) Users that have less than 1 test interactions\n",
+      "EvaluatorHoldout: Ignoring 329 ( 0.8%) Users that have less than 1 test interactions\n"
      ]
     }
    ],
@@ -100,42 +101,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unable to load Cython Compute_Similarity, reverting to Python\n",
-      "Similarity column 24507 (100.0%), 366.11 column/sec. Elapsed time 1.12 min\n",
-      "EvaluatorHoldout: Processed 40877 (100.0%) in 1.33 min. Users per second: 513\n",
-      "Unable to load Cython Compute_Similarity, reverting to Python\n",
-      "Similarity column 24507 (100.0%), 316.79 column/sec. Elapsed time 1.29 min\n",
-      "EvaluatorHoldout: Processed 40877 (100.0%) in 1.38 min. Users per second: 492\n",
-      "Unable to load Cython Compute_Similarity, reverting to Python\n",
-      "Similarity column 24507 (100.0%), 285.31 column/sec. Elapsed time 1.43 min\n",
-      "EvaluatorHoldout: Processed 40877 (100.0%) in 1.26 min. Users per second: 540\n",
-      "Unable to load Cython Compute_Similarity, reverting to Python\n",
-      "Similarity column 24507 (100.0%), 847.89 column/sec. Elapsed time 28.90 sec\n",
-      "EvaluatorHoldout: Processed 40877 (100.0%) in 27.88 sec. Users per second: 1466\n",
-      "Unable to load Cython Compute_Similarity, reverting to Python\n",
-      "Similarity column 24507 (100.0%), 993.23 column/sec. Elapsed time 24.67 sec\n",
-      "EvaluatorHoldout: Processed 40877 (100.0%) in 20.22 sec. Users per second: 2021\n",
-      "Unable to load Cython Compute_Similarity, reverting to Python\n",
-      "Similarity column 24507 (100.0%), 811.19 column/sec. Elapsed time 30.21 sec\n",
-      "EvaluatorHoldout: Processed 40877 (100.0%) in 30.48 sec. Users per second: 1341\n",
-      "Unable to load Cython Compute_Similarity, reverting to Python\n",
-      "Similarity column 24507 (100.0%), 749.42 column/sec. Elapsed time 32.70 sec\n",
-      "EvaluatorHoldout: Processed 40877 (100.0%) in 33.55 sec. Users per second: 1219\n",
-      "Unable to load Cython Compute_Similarity, reverting to Python\n",
-      "Similarity column 24507 (100.0%), 863.31 column/sec. Elapsed time 28.39 sec\n",
-      "EvaluatorHoldout: Processed 40877 (100.0%) in 26.73 sec. Users per second: 1529\n",
-      "Unable to load Cython Compute_Similarity, reverting to Python\n",
-      "Similarity column 24507 (100.0%), 819.88 column/sec. Elapsed time 29.89 sec\n",
-      "EvaluatorHoldout: Processed 40877 (100.0%) in 30.37 sec. Users per second: 1346\n",
-      "Unable to load Cython Compute_Similarity, reverting to Python\n",
-      "Similarity column 24507 (100.0%), 776.27 column/sec. Elapsed time 31.57 sec\n",
-      "EvaluatorHoldout: Processed 40877 (100.0%) in 30.87 sec. Users per second: 1324\n"
+      "ItemKNNCFRecommender: URM Detected 1 ( 0.0%) users with no interactions.\n",
+      "Similarity column 24507 (100.0%), 8499.92 column/sec. Elapsed time 2.88 sec\n",
+      "EvaluatorHoldout: Processed 40903 (100.0%) in 25.98 sec. Users per second: 1574\n",
+      "ItemKNNCFRecommender: URM Detected 1 ( 0.0%) users with no interactions.\n",
+      "Similarity column 24507 (100.0%), 8614.82 column/sec. Elapsed time 2.84 sec\n",
+      "EvaluatorHoldout: Processed 40903 (100.0%) in 29.40 sec. Users per second: 1391\n",
+      "ItemKNNCFRecommender: URM Detected 1 ( 0.0%) users with no interactions.\n",
+      "Similarity column 24507 (100.0%), 8704.95 column/sec. Elapsed time 2.82 sec\n",
+      "EvaluatorHoldout: Processed 40903 (100.0%) in 29.66 sec. Users per second: 1379\n",
+      "ItemKNNCFRecommender: URM Detected 1 ( 0.0%) users with no interactions.\n",
+      "Similarity column 24507 (100.0%), 8715.65 column/sec. Elapsed time 2.81 sec\n",
+      "EvaluatorHoldout: Processed 40903 (100.0%) in 21.28 sec. Users per second: 1922\n",
+      "ItemKNNCFRecommender: URM Detected 1 ( 0.0%) users with no interactions.\n",
+      "Similarity column 24507 (100.0%), 8890.45 column/sec. Elapsed time 2.76 sec\n",
+      "EvaluatorHoldout: Processed 40903 (100.0%) in 14.77 sec. Users per second: 2770\n",
+      "ItemKNNCFRecommender: URM Detected 1 ( 0.0%) users with no interactions.\n",
+      "Similarity column 24507 (100.0%), 8695.44 column/sec. Elapsed time 2.82 sec\n",
+      "EvaluatorHoldout: Processed 40903 (100.0%) in 25.00 sec. Users per second: 1636\n",
+      "ItemKNNCFRecommender: URM Detected 1 ( 0.0%) users with no interactions.\n",
+      "Similarity column 24507 (100.0%), 8539.81 column/sec. Elapsed time 2.87 sec\n",
+      "EvaluatorHoldout: Processed 40903 (100.0%) in 28.52 sec. Users per second: 1434\n",
+      "ItemKNNCFRecommender: URM Detected 1 ( 0.0%) users with no interactions.\n",
+      "Similarity column 24507 (100.0%), 8522.93 column/sec. Elapsed time 2.88 sec\n",
+      "EvaluatorHoldout: Processed 40903 (100.0%) in 21.86 sec. Users per second: 1872\n",
+      "ItemKNNCFRecommender: URM Detected 1 ( 0.0%) users with no interactions.\n",
+      "Similarity column 24507 (100.0%), 8515.29 column/sec. Elapsed time 2.88 sec\n",
+      "EvaluatorHoldout: Processed 40903 (100.0%) in 24.40 sec. Users per second: 1677\n",
+      "ItemKNNCFRecommender: URM Detected 1 ( 0.0%) users with no interactions.\n",
+      "Similarity column 24507 (100.0%), 8630.62 column/sec. Elapsed time 2.84 sec\n",
+      "EvaluatorHoldout: Processed 40903 (100.0%) in 24.48 sec. Users per second: 1671\n"
      ]
     },
     {
      "data": {
-      "text/plain": "   topK  shrink     score\n3   183      53  0.019434\n7   187      52  0.019409",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>topK</th>\n      <th>shrink</th>\n      <th>score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>3</th>\n      <td>183</td>\n      <td>53</td>\n      <td>0.019434</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>187</td>\n      <td>52</td>\n      <td>0.019409</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "   topK  shrink     score\n3   183      53  0.019323\n7   187      52  0.019318",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>topK</th>\n      <th>shrink</th>\n      <th>score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>3</th>\n      <td>183</td>\n      <td>53</td>\n      <td>0.019323</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>187</td>\n      <td>52</td>\n      <td>0.019318</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -144,43 +145,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{3: {'topK': 183.0, 'shrink': 53.0, 'score': 0.01943409399705082}}\n",
-      "Unable to load Cython Compute_Similarity, reverting to Python\n",
-      "Similarity column 24507 (100.0%), 811.25 column/sec. Elapsed time 30.21 sec\n",
-      "EvaluatorHoldout: Processed 40877 (100.0%) in 26.33 sec. Users per second: 1553\n",
-      "Unable to load Cython Compute_Similarity, reverting to Python\n",
-      "Similarity column 24507 (100.0%), 863.05 column/sec. Elapsed time 28.40 sec\n",
-      "EvaluatorHoldout: Processed 40877 (100.0%) in 27.01 sec. Users per second: 1513\n",
-      "Unable to load Cython Compute_Similarity, reverting to Python\n",
-      "Similarity column 24507 (100.0%), 871.57 column/sec. Elapsed time 28.12 sec\n",
-      "EvaluatorHoldout: Processed 40877 (100.0%) in 26.64 sec. Users per second: 1534\n",
-      "Unable to load Cython Compute_Similarity, reverting to Python\n",
-      "Similarity column 24507 (100.0%), 886.14 column/sec. Elapsed time 27.66 sec\n",
-      "EvaluatorHoldout: Processed 40877 (100.0%) in 26.85 sec. Users per second: 1522\n",
-      "Unable to load Cython Compute_Similarity, reverting to Python\n",
-      "Similarity column 24507 (100.0%), 877.75 column/sec. Elapsed time 27.92 sec\n",
-      "EvaluatorHoldout: Processed 40877 (100.0%) in 26.77 sec. Users per second: 1527\n",
-      "Unable to load Cython Compute_Similarity, reverting to Python\n",
-      "Similarity column 24507 (100.0%), 875.98 column/sec. Elapsed time 27.98 sec\n",
-      "EvaluatorHoldout: Processed 40877 (100.0%) in 26.80 sec. Users per second: 1525\n",
-      "Unable to load Cython Compute_Similarity, reverting to Python\n",
-      "Similarity column 24507 (100.0%), 877.62 column/sec. Elapsed time 27.92 sec\n",
-      "EvaluatorHoldout: Processed 40877 (100.0%) in 26.65 sec. Users per second: 1534\n",
-      "Unable to load Cython Compute_Similarity, reverting to Python\n",
-      "Similarity column 24507 (100.0%), 871.28 column/sec. Elapsed time 28.13 sec\n",
-      "EvaluatorHoldout: Processed 40877 (100.0%) in 26.87 sec. Users per second: 1521\n",
-      "Unable to load Cython Compute_Similarity, reverting to Python\n",
-      "Similarity column 24507 (100.0%), 708.14 column/sec. Elapsed time 34.61 sec\n",
-      "EvaluatorHoldout: Processed 40877 (100.0%) in 27.34 sec. Users per second: 1495\n",
-      "Unable to load Cython Compute_Similarity, reverting to Python\n",
-      "Similarity column 24507 (100.0%), 868.48 column/sec. Elapsed time 28.22 sec\n",
-      "EvaluatorHoldout: Processed 40877 (100.0%) in 26.75 sec. Users per second: 1528\n"
+      "{3: {'topK': 183.0, 'shrink': 53.0, 'score': 0.019322663878808606}}\n",
+      "ItemKNNCFRecommender: URM Detected 1 ( 0.0%) users with no interactions.\n",
+      "Similarity column 24507 (100.0%), 8670.02 column/sec. Elapsed time 2.83 sec\n",
+      "EvaluatorHoldout: Processed 40903 (100.0%) in 21.39 sec. Users per second: 1912\n",
+      "ItemKNNCFRecommender: URM Detected 1 ( 0.0%) users with no interactions.\n",
+      "Similarity column 24507 (100.0%), 8561.19 column/sec. Elapsed time 2.86 sec\n",
+      "EvaluatorHoldout: Processed 40903 (100.0%) in 21.84 sec. Users per second: 1873\n",
+      "ItemKNNCFRecommender: URM Detected 1 ( 0.0%) users with no interactions.\n",
+      "Similarity column 24507 (100.0%), 8515.81 column/sec. Elapsed time 2.88 sec\n",
+      "EvaluatorHoldout: Processed 40903 (100.0%) in 21.71 sec. Users per second: 1884\n",
+      "ItemKNNCFRecommender: URM Detected 1 ( 0.0%) users with no interactions.\n",
+      "Similarity column 24507 (100.0%), 8736.87 column/sec. Elapsed time 2.81 sec\n",
+      "EvaluatorHoldout: Processed 40903 (100.0%) in 21.58 sec. Users per second: 1895\n",
+      "ItemKNNCFRecommender: URM Detected 1 ( 0.0%) users with no interactions.\n",
+      "Similarity column 24507 (100.0%), 8727.27 column/sec. Elapsed time 2.81 sec\n",
+      "EvaluatorHoldout: Processed 40903 (100.0%) in 21.55 sec. Users per second: 1898\n",
+      "ItemKNNCFRecommender: URM Detected 1 ( 0.0%) users with no interactions.\n",
+      "Similarity column 24507 (100.0%), 8703.91 column/sec. Elapsed time 2.82 sec\n",
+      "EvaluatorHoldout: Processed 40903 (100.0%) in 21.66 sec. Users per second: 1888\n",
+      "ItemKNNCFRecommender: URM Detected 1 ( 0.0%) users with no interactions.\n",
+      "Similarity column 24507 (100.0%), 8598.41 column/sec. Elapsed time 2.85 sec\n",
+      "EvaluatorHoldout: Processed 40903 (100.0%) in 21.42 sec. Users per second: 1909\n",
+      "ItemKNNCFRecommender: URM Detected 1 ( 0.0%) users with no interactions.\n",
+      "Similarity column 24507 (100.0%), 8747.64 column/sec. Elapsed time 2.80 sec\n",
+      "EvaluatorHoldout: Processed 40903 (100.0%) in 21.47 sec. Users per second: 1906\n",
+      "ItemKNNCFRecommender: URM Detected 1 ( 0.0%) users with no interactions.\n",
+      "Similarity column 24507 (100.0%), 8718.92 column/sec. Elapsed time 2.81 sec\n",
+      "EvaluatorHoldout: Processed 40903 (100.0%) in 21.51 sec. Users per second: 1902\n",
+      "ItemKNNCFRecommender: URM Detected 1 ( 0.0%) users with no interactions.\n",
+      "Similarity column 24507 (100.0%), 8719.65 column/sec. Elapsed time 2.81 sec\n",
+      "EvaluatorHoldout: Processed 40903 (100.0%) in 21.56 sec. Users per second: 1897\n"
      ]
     },
     {
      "data": {
-      "text/plain": "   topK  shrink    score\n7   185      53  0.01944",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>topK</th>\n      <th>shrink</th>\n      <th>score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>7</th>\n      <td>185</td>\n      <td>53</td>\n      <td>0.01944</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "   topK  shrink     score\n3   186      52  0.019324",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>topK</th>\n      <th>shrink</th>\n      <th>score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>3</th>\n      <td>186</td>\n      <td>52</td>\n      <td>0.019324</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -189,7 +190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{7: {'topK': 185.0, 'shrink': 53.0, 'score': 0.01943996332784615}}\n"
+      "{3: {'topK': 186.0, 'shrink': 52.0, 'score': 0.019324115241284825}}\n"
      ]
     }
    ],
@@ -270,19 +271,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "{'score': 0.01943996332784615, 'params': [185, 53]}"
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 37,
+   "outputs": [],
    "source": [
-    "best_params_dict"
+    "import json\n",
+    "\n",
+    "importantParameters = df_rs_results.to_json(orient=\"records\")\n",
+    "parsed = json.loads(importantParameters)\n",
+    "\n",
+    "with open(\"logs/\" + recommender.RECOMMENDER_NAME + \"_logs.json\", 'w') as json_file:\n",
+    "        json.dump(parsed, json_file, indent=4)"
    ],
    "metadata": {
     "collapsed": false
