--- a/Hyperparameter Tuning/coarse-to-fine.ipynb
+++ b/Hyperparameter Tuning/coarse-to-fine.ipynb
@@ -17,14 +17,11 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import ParameterSampler\n",
-    "\n",
-    "import matplotlib.pyplot as pyplot\n",
-    "import optuna as op\n",
     "%matplotlib inline\n",
     "from Data_manager.split_functions.split_train_validation_random_holdout import split_train_in_two_percentage_global_sample\n",
     "from Evaluation.Evaluator import EvaluatorHoldout\n",
     "from Recommenders.KNN.ItemKNNCFRecommender import ItemKNNCFRecommender\n",
-    "from Utils.createURM import createURM2"
+    "from Utils.createURM import createURM"
    ],
    "metadata": {
     "collapsed": false
@@ -44,7 +41,7 @@
     }
    ],
    "source": [
-    "URM = createURM2()"
+    "URM = createURM()"
    ],
    "metadata": {
     "collapsed": false
@@ -195,8 +192,8 @@
    ],
    "source": [
     "grid_size = 100\n",
-    "TUNE_ITER = 10\n",
-    "num_epochs = 2\n",
+    "TUNE_ITER = 100\n",
+    "num_epochs = 5\n",
     "worse_score = 0\n",
     "\n",
     "init_param_grid = {'topK': [i for i in range(10, 500)],\n",
@@ -284,6 +281,15 @@
    "source": [
     "best_params_dict"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
