--- a/Hyperparameter Tuning/SLIM_BPR/SLIM_BPR.ipynb
+++ b/Hyperparameter Tuning/SLIM_BPR/SLIM_BPR.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "from Recommenders.SLIM.Cython.SLIM_BPR_Cython import SLIM_BPR_Cython\n",
     "import pandas as pd\n",
-    "from Utils.createURM import createBumpURM\n",
+    "from Utils.recsys2022DataReader import createBumpURM\n",
     "from Data_manager.split_functions.split_train_validation_random_holdout import split_train_in_two_percentage_global_sample\n",
     "from Evaluation.Evaluator import EvaluatorHoldout\n",
     "from sklearn.model_selection import ParameterSampler\n",
@@ -71,7 +71,7 @@
     }
    ],
    "source": [
-    "URM_train, URM_validation = split_train_in_two_percentage_global_sample(URM, train_percentage=0.80)\n",
+    "URM_train, URM_validation = split_train_in_two_percentage_global_sample(URM, train_percentage=0.85)\n",
     "evaluator_validation = EvaluatorHoldout(URM_validation, cutoff_list=[10], verbose=False)"
    ],
    "metadata": {
